# Chatbot_Rag_kanilla

./: .gitignore  README.md  api.py  app_streamlit.py  function_app.py  ingest_lancedb.py  ingestion.py  mds_to_test.py  pyproject.toml  rag_chat.py  rag_chat_gemini.py  rag_preview.py  requirements.txt  search_test.py
backend/: config.py  data_models.py  rag.py
knowledge_base/: rag_agent.py
knowledge_base/articles.lance/_transactions/: 0-a59c982c-8fb2-4e61-b4cc-023218817c73.txn  1-a3860eae-925e-4142-b5fb-98993216a272.txn  10-02f4d271-42be-4602-8353-3d5bffbc0361.txn  11-ab14d472-fe1a-41e4-a032-2f8bc8a3906b.txn  12-a031cd86-be2e-45e2-bda0-245bd513600f.txn  13-3077b0f8-cbdd-4491-bdd2-e1e61959342e.txn  14-87aa0ce4-3247-417e-a042-407d6b46410b.txn  15-9e354585-37b3-4a4f-9daa-28b20ea1c22d.txn  16-1f482ff8-12e1-4811-a2a0-4d95529a2cc3.txn  17-b8c7455f-efa2-487b-89e5-319171224921.txn  18-3c9804c3-bed0-4b7b-9f2b-ceca5f11c776.txn  19-4f4a11e7-094a-4c62-bb3c-178efa7a0d09.txn  2-04299f18-1706-42cc-90e8-a005c2f328c3.txn  20-727eadb8-e469-4c3c-b9af-3fca18dada5a.txn  21-bfc7e894-77b9-433b-8024-4353f8aebd20.txn  22-c3218cd4-dbe6-4d05-a307-97bfc634baba.txn  23-3dbd8cea-6c3b-427a-bf9f-e85a97b77555.txn  24-e92a3df6-8a6d-44eb-8e03-b8e18472bdb2.txn  25-deaff5d8-a226-4f27-88d3-158f7b633dd5.txn  26-e58d7552-3daf-4263-b57d-ec3059440acb.txn  27-1f00db06-375d-41cf-a783-0276f37b2db8.txn  28-71b46dbb-814a-484c-9805-abef479ce1ab.txn  29-91775d95-72e6-4029-98de-a662438aa3f7.txn  3-d0ba83a5-8605-42b3-9a90-54438ecdf7b9.txn  (+21 more)
src/: api.py  config.py  ingest.py  prompts.py  rag.py  utils.py
(+2 files in other folders)
