[project]
name = "chatbot-rag-kanilla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.125.0",
    "genai>=2.1.0",
    "google>=3.0.0",
    "google-genai>=1.56.0",
    "google-generativeai>=0.8.6",
    "ipykernel>=7.1.0",
    "lancedb>=0.26.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pydantic-ai>=0.0.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.52.2",
    "uvicorn>=0.38.0",
]
